@@ -5,6 +5,7 @@ dnl APACHE_MODULE(name, helptext[, objects[, structname[, default[, config]]]])
 APACHE_MODPATH_INIT(filters)
 
 APACHE_MODULE(buffer, Filter Buffering, , , yes)
+APACHE_MODULE(data, RFC2397 data encoder, , , yes)
 APACHE_MODULE(ratelimit, Output Bandwidth Limiting, , , yes)
 APACHE_MODULE(reqtimeout, Limit time waiting for request from client, , , yes)
 APACHE_MODULE(ext_filter, external filter module, , , most)
